--- a/index.html
+++ b/index.html
@@ -24,14 +24,44 @@
       <div class="top-content">
         <div>
           <div class="tolstoy">Leo Tolstoy</div>
-          <div>Leo Tolstoy, 1828-1910. In 1869 he published <em>War and Peace</em> in full.</div>
-          <button>Learn more</button>
+          <div class="tolstoy-info">Leo Tolstoy, 1828-1910. In 1869 he published <em>War and Peace</em> in full.</div>
+          <button class="learn-more">Learn more</button>
         </div>
         <img src="./images/tolstoy.png" height="150px" width="auto">
       </div>
 
     </div>
 
+
+    <div class="second-container">
+
+      <div class="second-container-header">Some of Tolstoy's characters</div>
+
+      <div class="images">
+
+        <div>
+          <img src="./images/pierre.png" height="128px">
+          <div>Pierre Bezukhov</div>
+        </div>
+
+        <div>
+          <img src="./images/andrey-bolkonsky.png" height="128px">
+          <div>Andry Bolkonsky</div>
+        </div>
+
+        <div>
+          <img src="./images/natasha.png" height="128px">
+          <div>Natsha Rostov</div>
+        </div>
+
+        <div>
+          <img src="./images/nikolay.png" height="128px">
+          <div>Nikolay Rostov</div>
+        </div>
+      </div>
+
+
+    </div>
   </body>
 
 </html>
