Do third, quote, section

--- a/index.html
+++ b/index.html
@@ -41,26 +41,30 @@
 
         <div>
           <img src="./images/pierre.png" height="128px">
-          <div>Pierre Bezukhov</div>
+          <div>Pierre Bezukhov, is an introspective young man without clear direction.</div>
         </div>
 
         <div>
           <img src="./images/andrey-bolkonsky.png" height="128px">
-          <div>Andry Bolkonsky</div>
+          <div>Andry Bolkonsky, close friend of Pierre, is the son of a prominent count.</div>
         </div>
 
         <div>
           <img src="./images/natasha.png" height="128px">
-          <div>Natsha Rostov</div>
+          <div>Natasha Rostov, sister to Nikolay rostov, is the embodiment of <em>joie de vivre.</em> </div>
         </div>
 
         <div>
           <img src="./images/nikolay.png" height="128px">
-          <div>Nikolay Rostov</div>
+          <div>Nikolay Rostov, son of count Ilya Rostov, is a young member of the hussars.</div>
         </div>
       </div>
 
+    </div>
 
+    <div class="third-container">
+      <div class="quote"><em>“Why does an apple fall when it is ripe? Is it brought down by the force of gravity? Is it because its stalk withers? Because it is dried by the sun, because it grows too heavy, or because the boy standing under the tree wants to eat it? None of these is the cause.... Every action of theirs, that seems to them an act of their own freewill is in the historical sense not free at all but is bound up with the whole course of history and preordained from all eternity.”</em></div>
+      <div class="quote-attribution">— Leo Tolstoy, <em>War and Peace</em></div>
     </div>
   </body>
 
