Add call to action section and footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
       <div class="quote"><em>“Why does an apple fall when it is ripe? Is it brought down by the force of gravity? Is it because its stalk withers? Because it is dried by the sun, because it grows too heavy, or because the boy standing under the tree wants to eat it? None of these is the cause.... Every action of theirs, that seems to them an act of their own freewill is in the historical sense not free at all but is bound up with the whole course of history and preordained from all eternity.”</em></div>
       <div class="quote-attribution">— Leo Tolstoy, <em>War and Peace</em></div>
     </div>
+
+    <div class="fourth-container">
+      <div class="card">
+        <div>
+          <div class="card-header">Buy now! It's time!</div>
+          <div>Click the link to be taken to the Amazon page for the best book ever written!</div>
+        </div>
+        <button class="buy-button">Buy now</button>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div>Tobias Main 2024</div>
+    </div>
   </body>
 
 </html>
